# twenty-crm-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.twenty.yml  langgraph.json  pyproject.toml
src/: config.py  graphql_client.py  llm.py
src/agent/: graph.py  prompts.py  tools.py
src/cli/: main.py
src/web/: server.py
src/web/static/: app.js  index.html  style.css
tests/: test_graphql_client.py
